# fastmicro

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
gateways/federation-gateway/: Dockerfile  gitversion.yml  main.py  pyproject.toml
gateways/federation-gateway/src/federation_gateway/: main.py
gateways/federation-gateway/tests/: test_placeholder.py
libs/settings/: README.md  pyproject.toml
libs/settings/.github/workflows/: python-app.yml
libs/settings/src/settings/: app_options.py  auth_options.py  caching_options.py  database_options.py  localization_options.py  logging_options.py  security_options.py  settings_manager.py  validators.py
services/audit-service/: Dockerfile  README.md  gitversion.yml  pyproject.toml
services/audit-service/src/audit_service/: __init__.py  main.py
services/audit-service/tests/: __init__.py
services/audit-service/tests/e2e/: __init__.py
services/audit-service/tests/integration/: __init__.py  test_api.py
services/audit-service/tests/unit/: __init__.py  test_audit_service.py
services/identity-admin-service/: Dockerfile  README.md  gitversion.yml  pyproject.toml
services/identity-admin-service/src/identity_admin_service/: __init__.py  configs.py  database.py  main.py  middleware.py
services/identity-admin-service/static/css/: admin.css  style.css
services/identity-admin-service/static/js/: admin.js
services/identity-admin-service/templates/admin/: base.html  clients.html  dashboard.html  users.html
services/identity-admin-service/tests/: __init__.py  conftest.py  test_clients_api.py  test_health.py  test_users_api.py
services/identity-service/: Dockerfile  README.md  alembic.ini  gitversion.yml  pyproject.toml
services/identity-service/alembic/: env.py  script.py.mako
services/identity-service/alembic/versions/: .gitkeep
services/identity-service/scripts/: __init__.py  seed_clients.py
services/identity-service/src/identity_service/: __init__.py  main.py
services/identity-service/static/css/: style.css
services/identity-service/templates/: base.html  consent.html  error.html  forgot-password.html  login.html  logout.html  register.html  reset-password.html
services/identity-service/tests/: __init__.py  conftest.py
services/identity-service/tests/integration/: test_oauth_endpoints.py
services/identity-service/tests/unit/: test_entities.py  test_mfa_service.py  test_password_reset.py  test_security.py  test_user_auth_service.py  test_value_objects.py
services/metastore-service/: Dockerfile  README.md  gitversion.yml  pyproject.toml
services/metastore-service/src/metastore_service/: __init__.py  main.py
services/metastore-service/tests/: __init__.py  conftest.py
services/metastore-service/tests/integration/: test_api.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/src/notification_service/: __init__.py  main.py
services/notification-service/tests/unit/: test_dispatcher.py
services/user-service/: Dockerfile  README.md  pyproject.toml
services/user-service/src/user_service/: __init__.py  main.py
services/user-service/tests/: conftest.py
shared/: README.md  __init__.py  pyproject.toml
shared/auth/: password.py
shared/cache/: redis_client.py
shared/cache/backends/: __init__.py  memory.py  null.py  redis.py
shared/config/: __init__.py  auth.py  base.py  database.py
shared/constants/: environments.py  http_status.py  patterns.py
shared/dbs/: __init__.py  repository.py  unit_of_work.py
shared/exceptions/: __init__.py  base.py
shared/extensions/: __init__.py  decorators.py  dependency_injection.py
shared/fastapi_utils/: __init__.py  exception_handlers.py  middleware.py
shared/http_client/: circuit_breaker.py
shared/observability/: __init__.py  health.py
shared/sqlalchemy_async/: __init__.py  models.py  repository.py
shared/src/shared/: __init__.py
shared/tests/: __init__.py  conftest.py
shared/tests/test_audit/: test_audit.py
shared/tests/test_auth/: __init__.py  test_api_key.py  test_jwt.py  test_password.py
shared/tests/test_cache/: __init__.py  test_decorators.py  test_lock.py  test_memory_cache.py  test_null_cache.py  test_redis_client.py  test_tiered_cache.py
shared/tests/test_config/: __init__.py  test_auth.py  test_base.py  test_database.py  test_redis.py
shared/tests/test_constants/: __init__.py  test_environments.py  test_http_status.py  test_patterns.py
shared/tests/test_cqrs/: __init__.py  test_cqrs.py
shared/tests/test_dbs/: __init__.py  test_repository.py  test_specification.py  test_unit_of_work.py
shared/tests/test_exceptions/: __init__.py  test_base.py  test_database.py  test_http.py  test_validation.py
shared/tests/test_extensions/: __init__.py  test_decorators.py  test_dependency_injection.py  test_dishka_adapter.py
shared/tests/test_fastapi_utils/: __init__.py  test_dependencies.py  test_exception_handlers.py  test_lifespan.py  test_middleware.py
shared/tests/test_feature_flags/: test_feature_flags.py
shared/tests/test_http_client/: __init__.py  test_circuit_breaker.py  test_client.py
shared/tests/test_idempotency/: test_idempotency.py
shared/tests/test_identity/: __init__.py  conftest.py  test_models.py  test_repositories.py
shared/tests/test_messaging/: __init__.py  test_config.py  test_outbox.py  test_serialization.py
shared/tests/test_notifications/: test_notifications.py
shared/tests/test_observability/: __init__.py  test_health.py  test_logging.py  test_metrics.py  test_prometheus_bridge.py  test_tracing.py
shared/tests/test_proto/: test_proto.py
shared/tests/test_sqlalchemy_async/: __init__.py  test_database.py  test_instrumentation.py  test_migrations.py  test_models.py  test_repository.py
shared/tests/test_tasks/: test_runner.py
shared/tests/test_utils/: __init__.py  test_datetime.py  test_serialization.py  test_strings.py  test_validation.py
shared/utils/: datetime.py  serialization.py  validation.py
(+469 files in other folders)
