[project]
name = "federation-gateway"
version = "0.1.0"
description = "This service acts as a central authentication gateway using standard OIDC (OpenID Connect) flows."
authors = [
    {name = "Nam Tran",email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",    
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "authlib (>=1.6.1,<2.0.0)",    
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "settings (>=0.1.0)",
]

[tool.poetry]
packages = [{include = "federation_gateway", from = "src"}]
package-mode = false

[tool.poetry.group.local.dependencies]
settings = { path = "../../libs/settings", develop = true }

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
pytest-httpx = "^0.35.0"
coverage = "^7.9.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
