[project]
name = "federation-gateway"
version = "0.1.0"
description = "Central authentication gateway using standard OIDC (OpenID Connect) flows"
authors = [
    {name = "Nam Tran", email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["gateway", "authentication", "oidc", "oauth2", "federation", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Security",
]

dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "structlog>=24.0.0,<25.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "authlib>=1.3.0,<2.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "shared[observability,fastapi]",
]

# ============================================================================
# Build System
# ============================================================================

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/federation_gateway"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", ".venv/", "__pycache__/"]

# ============================================================================
# UV Configuration
# ============================================================================

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

# ============================================================================
# Dependency Groups
# ============================================================================

[dependency-groups]
dev = [
    "shared",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.35.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "E", "W", "F", "I", "B", "C4", "UP", "SIM"]  # A = flake8-builtins (prevent shadowing)
ignore = [
    "E501",   # Line too long - handled by formatter (official ruff pattern)
    "B008",   # Function calls in default arguments - FastAPI Depends() pattern
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Re-exports and conditional imports (official pattern)
"tests/**/*.py" = ["S101", "PLR2004", "B017", "F841"]  # Assert, magic values, raises(Exception), unused vars in tests
"**/api/**/*.py" = ["B904"]  # HTTPException in except - intentional for API error responses
"**/services/*.py" = ["B904"]  # Exception chaining in services - intentional wrapping
"**/middleware/*.py" = ["B904"]  # HTTPException in middleware auth - intentional error handling

[tool.ruff.lint.isort]
known-first-party = ["federation_gateway", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/federation_gateway"]
branch = true
