[project]
name = "settings"
version = "0.1.0"
description = ""
authors = [
    {name = "Nam Tran",email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "settings", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 100


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true