[project]
name = "audit-service"
version = "0.1.0"
description = "Audit logging service for tracking system events, user actions, and compliance records"
authors = [
    {name = "Nam Tran", email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["microservices", "audit", "logging", "compliance", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "structlog>=24.0.0,<25.0.0",
    "httpx>=0.27.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.19.0",
]

# ============================================================================
# Build System
# ============================================================================

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_service"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", ".venv/", "__pycache__/"]

# ============================================================================
# UV Configuration
# ============================================================================

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

# ============================================================================
# Dependency Groups
# ============================================================================

[dependency-groups]
dev = [
    "shared",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.19.0",
]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "B009"]

[tool.ruff.lint.isort]
known-first-party = ["audit_service", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/audit_service"]
branch = true
