[project]
name = "identity-service"
version = "0.1.0"
description = "Enterprise Identity Provider - OAuth 2.0 and OpenID Connect server for authentication and authorization"
authors = [
    {name = "Nam Tran", email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["identity", "oauth2", "openid-connect", "authentication", "authorization", "fastapi", "authlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
]

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    
    # OAuth2 / OpenID Connect
    "authlib>=1.3.0,<2.0.0",
    
    # Security
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "cryptography>=42.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    
    # Cache / Sessions
    "redis>=5.0.0,<6.0.0",
    
    # Validation & Serialization
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "email-validator>=2.0.0,<3.0.0",
    
    # Templates (Login UI)
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.9",
    
    # Observability
    "structlog>=24.0.0,<25.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.19.0",
    
    # HTTP Client (for federation)
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "faker>=22.0.0",
]

[tool.poetry]
packages = [{include = "identity_service", from = "src"}]

[tool.poetry.group.local.dependencies]
shared = { path = "../../shared", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
httpx = ">=0.27.0"
mypy = ">=1.8.0"
ruff = ">=0.1.0"
pre-commit = ">=3.6.0"
faker = ">=22.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "B009"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/identity_service"]
branch = true
