[project]
name = "identity-service"
version = "0.1.0"
description = "Enterprise Identity Provider - OAuth 2.0 and OpenID Connect server for authentication and authorization"
authors = [
    {name = "Nam Tran", email = "nam.tranphuong@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["identity", "oauth2", "openid-connect", "authentication", "authorization", "fastapi", "authlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
]

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    
    # OAuth2 / OpenID Connect
    "authlib>=1.3.0,<2.0.0",
    
    # Security
    "pwdlib[argon2,bcrypt]>=0.3.0,<1.0.0",  # Modern password hashing (replaces passlib)
    "pyotp>=2.9.0,<3.0.0",
    "cryptography>=42.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    
    # Cache / Sessions
    "redis>=5.0.0,<6.0.0",
    
    # Validation & Serialization
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "email-validator>=2.0.0,<3.0.0",
    
    # Templates (Login UI)
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.9",
    
    # Observability
    "structlog>=24.0.0,<25.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.19.0",
    
    # HTTP Client (for federation)
    "httpx>=0.27.0,<1.0.0",

    # Shared library
    "shared[observability,database,caching,fastapi]",
]

# ============================================================================
# Build System
# ============================================================================

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_service"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", ".venv/", "__pycache__/"]

# ============================================================================
# UV Configuration
# ============================================================================

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

# ============================================================================
# Dependency Groups
# ============================================================================

[dependency-groups]
dev = [
    "shared",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "faker>=22.0.0",
    "aiosqlite>=0.19.0",
]

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["A", "E", "W", "F", "I", "B", "C4", "UP", "SIM"]  # A = flake8-builtins (prevent shadowing)
ignore = [
    "E501",   # Line too long - handled by formatter (official ruff pattern)
    "B008",   # Function calls in default arguments - FastAPI Depends() pattern
    "SIM102", # Nested if - sometimes clearer for auth logic (check type before secret)
    "SIM103", # Return bool condition - sometimes clearer with expiry checks
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Re-exports and conditional imports (official pattern)
"tests/**/*.py" = ["S101", "PLR2004", "B017", "F841"]  # Assert, magic values, raises(Exception), unused vars in tests

[tool.ruff.lint.isort]
known-first-party = ["identity_service", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/identity_service"]
branch = true
